Enhance EVM parameters and contract address management
- Updated the EVM parameters to include new fields for contract addresses and security settings, allowing for better configuration and management.
- Implemented methods to retrieve and validate these parameters, ensuring that contract addresses are properly set and checks are enabled only when necessary.
- Refactored the msg_server to utilize the new parameter structure, improving the clarity and reliability of contract interactions.
- Enhanced test coverage for parameter validation and bootstrap mode checks, ensuring robust functionality across different configurations.

--- a/.gitignore
+++ b/.gitignore
@@ -84,3 +84,15 @@ dependency-graph.png
 # OpenZeppelin contracts
 contracts/@openzeppelin/*
 cmd/nxqd/nxqd
+
+QUICKSTART_DYNAMIC_PARAMS.md
+governance-proposals/*
+GOVERNANCE_WORKFLOW.md
+# Dynamic params - environment-specific files
+*-proposal.json
+
+# Test artifacts
+test-output.log
+params.json
+chain.log
+.nxqd-test/
