--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -4,7 +4,7 @@ on:
   push:
     branches:
       - main
-
+      - "mainnet-*"
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -21,7 +21,7 @@ jobs:
         id: meta
         run: |
           echo "image_name=nexqloud-chain" >> $GITHUB_OUTPUT
-          echo "image_tag=main-${{ github.sha }}" >> $GITHUB_OUTPUT
+          echo "image_tag=${{ github.ref_name }}-${{ github.sha }}" >> $GITHUB_OUTPUT
 
       - name: Log in to Harbor
         uses: docker/login-action@v3
